// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextField ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-1j5o4eu-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-1unve2b-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="test-text-field"
      id="test-text-field-label"
    >
      TextField Test Label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-dpynhu-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-hcl30a-MuiInputBase-input-MuiOutlinedInput-input"
        id="test-text-field"
        type="text"
        value="test"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-1n64csd-MuiNotchedOutlined-root"
        >
          <span>
            TextField Test Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`TextField ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-1j5o4eu-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-kb63yk-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="test-text-field"
      id="test-text-field-label"
    >
      TextField Test Label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-by28yo-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1bynoch-MuiInputBase-input-MuiOutlinedInput-input"
        id="test-text-field"
        type="text"
        value="test"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-1n64csd-MuiNotchedOutlined-root"
        >
          <span>
            TextField Test Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`TextField ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-ovpqo9-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorSecondary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-1f4wsy-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="test-text-field"
      id="test-text-field-label"
    >
      TextField Test Label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorSecondary MuiInputBase-formControl MuiInputBase-sizeSmall css-s1ym9j-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1shsqvu-MuiInputBase-input-MuiOutlinedInput-input"
        id="test-text-field"
        type="text"
        value="test"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-1n64csd-MuiNotchedOutlined-root"
        >
          <span>
            TextField Test Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`TextField ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-1j5o4eu-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorSecondary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-cnaqcn-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="test-text-field"
      id="test-text-field-label"
    >
      TextField Test Label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorSecondary MuiInputBase-formControl MuiInputBase-sizeSmall css-13mvw41-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1bynoch-MuiInputBase-input-MuiOutlinedInput-input"
        id="test-text-field"
        type="text"
        value="test"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-1n64csd-MuiNotchedOutlined-root"
        >
          <span>
            TextField Test Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`TextField ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-1lpmsmr-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-10szopb-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="test-text-field"
      id="test-text-field-label"
    >
      TextField Test Label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1v5jxjp-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-1phryni-MuiInputBase-input-MuiOutlinedInput-input"
        id="test-text-field"
        type="text"
        value="test"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-ex8a5f-MuiNotchedOutlined-root"
        >
          <span>
            TextField Test Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`TextField ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-3u8ssk-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-s9kz2k-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="test-text-field"
      id="test-text-field-label"
    >
      TextField Test Label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1d4fsxt-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-p1pyuz-MuiInputBase-input-MuiOutlinedInput-input"
        id="test-text-field"
        type="text"
        value="test"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-ex8a5f-MuiNotchedOutlined-root"
        >
          <span>
            TextField Test Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;
